sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: '(' expected but identifier found.
      if ecart>1 {
         ^AlgCombSort:10: error: illegal start of simple expression
      };var i = 0
       ^AlgCombSort:11: error: ';' expected but '{' found.
    };while(i+ecart<len) {
                         ^